# elasticmagic-qf-attrs

./: .bumpversion.cfg  .coveragerc  .gitignore  README.md  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: integ-tests.yaml  pypackage.yaml  python.yaml  unit-tests.yaml
elasticmagic_qf_attrs/: __init__.py  facet.py  facet_result.py  simple.py  util.py
tests/: conftest.py  test_compined.py  test_facet.py  test_simple.py
tests_integ/: attrs.py  conftest.py  docs.py  test_facet.py  test_simple.py  test_simple_attrs_queryfilters.py
