[tool.poetry]
name = "elasticmagic-qf-attrs"
version = "0.0.0"
license = "Apache License 2.0"
description = ""
authors = ["Alexander Koval <kovalidis@gmail.com>"]
maintainers = ["Alexander Koval <kovalidis@gmail.com>"]
readme = "README.rst"
homepage = "https://github.com/anti-social/elasticmagic-qf-attrs"
repository = "https://github.com/anti-social/elasticmagic-qf-attrs"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.7"
elasticmagic = "^0.1.0-alpha.12"

[tool.poetry.dev-dependencies]
elasticsearch-async = "^6.2.0"
flake8 = "^3.7.9"
flake8-print = "^3.1.4"
mypy = "^0.770"
pytest = "^5.2"
pytest-cov = "^2.8.1"
pytest-asyncio = "^0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
